--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <a href="CV-DEXTER-DEV-WEB.pdf" class="btn btn-secondary">Télécharger mon CV</a>
                 </div>
                 <div class="about-image">
-                    <img src="file_0000000064bc62438d68067436aa2ae4.png" alt="Photo de profil">
+                    <img src="IMG/1757040757958.png" alt="Photo de profil">
                 </div>
             </div>
         </div>
@@ -206,4 +206,5 @@
     <script src="JS/script.js"></script>
    
 </body>
+
 </html>
