--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <a href="CV-DEXTER-DEV-WEB.pdf" class="btn btn-secondary">Télécharger mon CV</a>
                 </div>
                 <div class="about-image">
-                    <img src="IMG/1757040757958.png" alt="Photo de profil">
+                    <img src="IMG/1757040757958.jpg" alt="Photo de profil">
                 </div>
             </div>
         </div>
@@ -208,3 +208,4 @@
 </body>
 
 </html>
+
