--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <!-- Hero Section -->
     <section id="home" class="hero">
         <div class="container">
-            <h1>Je suis Dexter, Développeur en devenir</h1>
+            <h1>Salut moi c'est Dexter, Développeur en devenir</h1>
             <p>Passionné par le web et le design !</p>
             <a href="#projects" class="btn">Voir mes projets</a>
         </div>
@@ -38,10 +38,9 @@
     <!-- About Section -->
     <section id="about">
         <div class="container">
-            <h2>À propos</h2>
+            <h2>À propos de moi</h2>
             <div class="about-content">
                 <div class="about-text">
-                    <h2>À propos de moi</h2>
                     <p>Je m'appelle DEXTER NGASSA NKAMTA, un passionné de développement web et de création d'expériences digitales innovantes. Mon parcours dans le monde de la programmation a commencé il y a [nombre] années, et depuis, je n'ai cessé d'explorer et de perfectionner mes compétences dans ce domaine en constante évolution.</p>
                     
                     <p>Actuellement étudiant en développement web, je me spécialise dans la création d'interfaces utilisateur intuitives et responsives. Ma curiosité naturelle et mon désir d'apprendre me poussent constamment à me tenir informé des dernières tendances et technologies émergentes dans le domaine du développement front-end et back-end.</p>
@@ -230,5 +229,6 @@
 </body>
 
 </html>
+
 
 
