--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <h2>À propos de moi</h2>
             <div class="about-content">
                 <div class="about-text">
-                    <p>Je m'appelle DEXTER NGASSA NKAMTA, un passionné de développement web et de création d'expériences digitales innovantes. Mon parcours dans le monde de la programmation a commencé il y a [nombre] années, et depuis, je n'ai cessé d'explorer et de perfectionner mes compétences dans ce domaine en constante évolution.</p>
+                    <p>Je m'appelle DEXTER NGASSA NKAMTA, un passionné de développement web et de création d'expériences digitales innovantes. Mon parcours dans le monde de la programmation a commencé il y a 2 ans, et depuis, je n'ai cessé d'explorer et de perfectionner mes compétences dans ce domaine en constante évolution.</p>
                     
                     <p>Actuellement étudiant en développement web, je me spécialise dans la création d'interfaces utilisateur intuitives et responsives. Ma curiosité naturelle et mon désir d'apprendre me poussent constamment à me tenir informé des dernières tendances et technologies émergentes dans le domaine du développement front-end et back-end.</p>
                     
@@ -229,6 +229,7 @@
 </body>
 
 </html>
+
 
 
 
